# Electronic-Control-Assessment-3

./: .gitignore  CMakeLists.txt  CMakePresets.json  Electronic-Control-Assessment-3.cpp  Electronic-Control-Assessment-3.h  README.md  SerialExample.cpp  SerialExample.hpp  crc.cpp  crc.hpp  main.cpp
.github/workflows/: cmake-multi-platform.yml
ZUOYEwwd/ZUOYE/: CMakeLists.txt  ZUOYE.ioc
ZUOYEwwd/ZUOYE/Core/Inc/: stm32f4xx_it.h
ZUOYEwwd/ZUOYE/Core/Src/: can.c  gpio.c  main.c  stm32f4xx_it.c  usart.c
ZUOYEwwd/ZUOYE/User/: M2006_sp.c  M2006_sp.h  PID.c  PID.h  VOFA.c  VOFA.h
ZUOYEwwd/ZUOYE/cmake/: gcc-arm-none-eabi.cmake
serial/src/impl/list_ports/: list_ports_win.cc
